--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -101,17 +101,30 @@
         {
             "label": "xk2: yapf current file",
             "type": "process",
-            "options": {
-                "env": {
-                    "PIPENV_VERBOSITY": "-1"
-                }
-            },
             "command": "pipenv",
             "args": [
                 "run",
                 "yapf",
                 "--in-place",
                 "--verbose",
+                "${file}"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "clear": false
+            },
+            "problemMatcher": []
+        },
+        // ---------------------------------------------------------------------------------------------------------------------
+        // ---------------------------------------------------------------------------------------------------------------------
+        {
+            "label": "xk2: flake8 current file",
+            "type": "process",
+            "command": "pipenv",
+            "args": [
+                "run",
+                "flake8",
                 "${file}"
             ],
             "presentation": {
